--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -164,3 +164,23 @@ main {
 .text-logo {
   @apply scroll-m-20 text-2xl text-shadow-xs font-extrabold tracking-tight text-balance;
 }
+
+/* Animation */
+
+@layer utilities {
+  .fade-In {
+    opacity: 0;
+    animation: fadeIn 1s ease-out forwards;
+  }
+
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+      transform: translateY(10px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+}
